Overflow wasn't properly handled on the x-axis fixed

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -171,6 +171,8 @@
 @media screen and (max-width: 525px) {
 
     .about-container {
+        padding-right: 0;
+        padding-left: 0;
         margin-top: 8rem;
         margin-bottom: 8rem;
     }
