--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -101,6 +101,8 @@
 @media screen and (max-width: 525px) {
 
     .contact-container {
+        padding-right: 0;
+        padding-left: 0;
         margin-top: 8rem;
         margin-bottom: 8rem;
     }
