--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -268,6 +268,8 @@
 @media screen and (max-width: 525px) {
 
     .heading-container {
+        padding-right: 0;
+        padding-left: 0;
         margin-top: 8rem;
         margin-bottom: 10rem;
     }
