--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -799,6 +799,8 @@ a {
 }
 @media screen and (max-width: 525px) {
   .about-container {
+    padding-right: 0;
+    padding-left: 0;
     margin-top: 8rem;
     margin-bottom: 8rem;
   }
@@ -1088,6 +1090,8 @@ a {
 }
 @media screen and (max-width: 525px) {
   .heading-container {
+    padding-right: 0;
+    padding-left: 0;
     margin-top: 8rem;
     margin-bottom: 10rem;
   }
@@ -1287,6 +1291,8 @@ a {
 }
 @media screen and (max-width: 525px) {
   .contact-container {
+    padding-right: 0;
+    padding-left: 0;
     margin-top: 8rem;
     margin-bottom: 8rem;
   }
